--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-material": "^0.7.4",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0"
   },
   "devDependencies": {
